[package]
name = "nanobe"
version = "0.0.1"
authors = ["koehr <n@koehr.in>"]
license = "MIT"
description= "NANOBE aint no ordinary blog engine"
readme = "README.md"
categories = ["weblog", "blog-engine", "text-processing", "command-line-utilities"]
keywords = ["static", "website", "weblog", "blog", "markdown", "ssr", "web"]
repository = "https://github.com/nkoehring/nanobe"
homepage = "https://github.com/nkoehring/nanobe"

[dependencies]
bart = "0.1.4"
# bart_derive = "0.1.4"
comrak = "0.1.6"
slog = "2.0.6"
sloggers = "0.2.0"
glob = "0.2.11"
chrono = "0.4.0"
serde_derive = "1.0"
serde_yaml = "0.7.1"
serde_json = "1.0.3"
rayon = "0.8.2"

## for future use
# slug = "0.1.2"
# rocket = "0.3.2"
# rocket_codegen = "0.3.2"
# notify = "4.0.0"

[dependencies.clap]
version = "2.25.0"
default-features = false
features = [ "wrap_help", "color" ]

[dependencies.serde]
version = "1.0"
default-features = true
features = [ "std", "rc" ]

[dependencies.bart_derive]
path = "../bart/libs/bart_derive/"
version = "*"

